Add uw madison css

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -6,7 +6,6 @@ website:
   title: "STAT479"
   navbar:
     background: primary
-    search: true
     left:
       - text: "Home"
         href: index.qmd
@@ -25,7 +24,8 @@ website:
 format:
   html:
     theme: cosmo
-    css: styles.css
+    css: uw-style.css
+    #css: styles.css
     toc: true
 
 
