--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -11,6 +11,8 @@ website:
         href: index.qmd
       - text: "Lectures"
         href: lectures.qmd
+      - text: "Guides"
+        href: guides.qmd
       - text: "Exercises"
         href: exercises.qmd
     sidebar:
@@ -20,6 +22,8 @@ website:
         contents: lectures/*
       - title: "Exercises"
         contents: exercises/*
+      - title: "Guides"
+        contents: guides/*
 
 format:
   html:
