Add several pages

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -15,21 +15,20 @@ website:
         href: guides.qmd
       - text: "Exercises"
         href: exercises.qmd
-    sidebar:
-      - title: "Lectures"
-        style: "docked"
-        background: light
-        contents: lectures/*
-      - title: "Exercises"
-        contents: exercises/*
-      - title: "Guides"
-        contents: guides/*
-
+  sidebar:
+    - title: "Lectures"
+      style: "docked"
+      background: light
+      contents: "lectures/*.qmd"
+    - title: "Exercises"
+      contents: "exercises/*.qmd"
+    - title: "Guides"
+      contents: "guides/*.qmd"
 format:
   html:
     theme: cosmo
-    css: uw-style.css
-    #css: styles.css
+    #css: uw-style.css
+    css: styles.css
     toc: true
 
 
