--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -19,7 +19,8 @@ website:
     - title: "Lectures"
       style: "docked"
       background: light
-      contents: "lectures/*.qmd"
+      contents: 
+        - lectures/lecture1.qmd
     - title: "Exercises"
       contents: "exercises/*.qmd"
     - title: "Guides"
