--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -9,25 +9,27 @@ website:
     left:
       - text: "Home"
         href: index.qmd
-      - text: "Lectures"
-        href: lectures.qmd
-      - text: "Guides"
-        href: guides.qmd
-      - text: "Exercises"
-        href: exercises.qmd
         
+      - sidebar:lectures
+      - sidebar:guides
+      - sidebar:guides
+      
   sidebar:
-    - title: "Lectures"
+    - id: lectures
+      title: "Lectures"
       style: "docked"
       background: light
-      contents: 
-        - lectures/lecture1.qmd
-        
-    - title: "Exercises"
-      contents: "exercises/*.qmd"
+      collapse-level: 2
+      contents: "lectures/*.qmd"
       
-    - title: "Guides"
+    - id: exercises
+      title: "Exercises"
+      contents: "exercises/*.qmd"      
+        
+    - id: guides
+      title: "Guides"
       contents: "guides/*.qmd"
+    
 format:
   html:
     theme: cosmo
