--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -5,13 +5,14 @@ project:
 website:
   title: "STAT479"
   navbar:
-    background: primary
+    background: "primary"
+    foreground: "secondary"
     left:
       - text: "Home"
         href: index.qmd
         
       - sidebar:lectures
-      - sidebar:guides
+      - sidebar:exercises
       - sidebar:guides
       
   sidebar:
