Change brand background and foreground

--- a/website/_brand.yml
+++ b/website/_brand.yml
@@ -5,5 +5,7 @@ color:
     UWLightGray: "#F7F7F7"
     UWDarkGray: "#333333"
     UWLinkBlue: "#0479A8"
-  background: UWRed
-  foreground: UWWhite
+  background: UWLightGray
+  foreground: black
+  primary: UWRed
+  secondary: UWWhite
