Continue to tinker with brand

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -33,10 +33,10 @@ website:
     
 format:
   html:
-    theme: cosmo
+    #theme: cosmo
     #css: uw-style.css
     css: styles.css
     toc: true
-
+brand: _brand.yml
 
 
