Add theme back in

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -5,8 +5,8 @@ project:
 website:
   title: "STAT479"
   navbar:
-    background: "primary"
-    foreground: "secondary"
+    background: "#C5050C"
+    foreground: "#FFFFFF"
     left:
       - text: "Home"
         href: index.qmd
@@ -33,7 +33,7 @@ website:
     
 format:
   html:
-    #theme: cosmo
+    theme: cosmo
     #css: uw-style.css
     css: styles.css
     toc: true
