Update landing page

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -38,6 +38,7 @@ format:
     toc: true
 
 execute:
-  cached: true
+  cache: true
 code-annotations: hover 
 bibliography: lectures/stat479_refs.bib
+lightbox: true
