Add tex outputs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 .RData
 .Ruserdata
 *DS_Store
-syllabus/*.log
-syllabus/*.aux
-syllabus/*.out
-syllabus/*synctex.gz
+website/syllabus/*.log
+website/syllabus/*.aux
+website/syllabus/*.out
+website/syllabus/*synctex.gz
+docs/*.tex
+
 
