Switch to lecture00

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -33,12 +33,13 @@ website:
     
 format:
   html:
-    theme: cosmo
+    theme: [cosmo, styles.scss]
     css: styles.css
     toc: true
 
 execute:
   cache: true
 code-annotations: hover 
+code-overflow: wrap
 bibliography: lectures/stat479_refs.bib
 lightbox: true
