--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -10,26 +10,27 @@ website:
     left:
       - text: "Home"
         href: index.qmd
-        
+      - text: "Syllabus"
+        href: syllabus.qmd        
       - sidebar:lectures
-      - sidebar:exercises
-      - sidebar:guides
+      #- sidebar:exercises
+      #- sidebar:guides
       
   sidebar:
     - id: lectures
-      title: "Lectures"
+      title: "Lecture Code"
       style: "docked"
       background: light
       collapse-level: 2
       contents: "lectures/*.qmd"
       
-    - id: exercises
-      title: "Exercises"
-      contents: "exercises/*.qmd"      
+   # - id: exercises
+   #   title: "Exercises"
+   #   contents: "exercises/*.qmd"      
         
-    - id: guides
-      title: "Guides"
-      contents: "guides/*.qmd"
+   # - id: guides
+   #   title: "Guides"
+   #   contents: "guides/*.qmd"
     
 format:
   html:
