Try to embed slides

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -13,6 +13,7 @@ website:
       - text: "Syllabus"
         href: syllabus.qmd        
       - sidebar:lectures
+      - sidebar:slides
       #- sidebar:exercises
       #- sidebar:guides
       
@@ -23,6 +24,12 @@ website:
       background: light
       collapse-level: 2
       contents: "lectures/*.qmd"
+    - id: slides
+      title: "Lecture Slides"
+      style: "docked"
+      background: light
+      collapse-level: 2
+      contents: "slides/*.qmd"
       
    # - id: exercises
    #   title: "Exercises"
