Embed slides succesfully

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -1,9 +1,10 @@
 project:
   type: website
   output-dir: ../docs
-  resources:
-   - raw_slides/*
-
+  render:
+   - "index.qmd"
+   - "lectures/*.qmd"
+   - "slides/*.qmd"
 
 website:
   title: "STAT479"
@@ -32,7 +33,7 @@ website:
       style: "docked"
       background: light
       collapse-level: 2
-      contents: "slides/*.qmd"
+      contents: "slides/lecture*.qmd"
       
    # - id: exercises
    #   title: "Exercises"
