--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -6,6 +6,7 @@ project:
    - "syllabus.qmd"
    - "lectures/*.qmd"
    - "slides/*.qmd"
+   - "slides/raw_slides/*.qmd"
 
 website:
   title: "STAT479"
@@ -19,8 +20,6 @@ website:
         href: syllabus.qmd        
       - sidebar:lectures
       - sidebar:slides
-      #- sidebar:exercises
-      #- sidebar:guides
       
   sidebar:
     - id: lectures
@@ -33,16 +32,8 @@ website:
       title: "Lecture Slides"
       style: "docked"
       background: light
-      collapse-level: 1
-      contents: "slides/lecture*.qmd"
-      
-   # - id: exercises
-   #   title: "Exercises"
-   #   contents: "exercises/*.qmd"      
-        
-   # - id: guides
-   #   title: "Guides"
-   #   contents: "guides/*.qmd"
+      collapse-level: 2
+      contents: "slides/*.qmd"
     
 format:
   html:
