Update slides03 and lecture03

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,9 @@ docs/*.tex
 *.rdb
 *.rdx
 
+website/lectures/lecture*_cache/
+website/lectures/lecture*_files/
+website/slides/raw_slides/slides*cache/
+website/slides/raw_slides/slides*_files/
+
 
