Update lecture notes tab

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -23,7 +23,7 @@ website:
       
   sidebar:
     - id: lectures
-      title: "Lecture Code"
+      title: "Lecture Notes"
       style: "docked"
       background: light
       collapse-level: 2
