--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -4,6 +4,7 @@ project:
   render:
    - "index.qmd"
    - "syllabus.qmd"
+   - "project1.qmd"
    - "lectures/*.qmd"
    - "slides/*.qmd"
    - "slides/raw_slides/*.qmd"
@@ -20,6 +21,8 @@ website:
         href: syllabus.qmd        
       - sidebar:lectures
       - sidebar:slides
+      - text: "Project 1 Information"
+        href: project1.qmd
       
   sidebar:
     - id: lectures
