Add project 2 information

--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -5,6 +5,7 @@ project:
    - "index.qmd"
    - "syllabus.qmd"
    - "project1.qmd"
+   - "project2.qmd"
    - "lectures/*.qmd"
    - "slides/*.qmd"
    - "slides/raw_slides/*.qmd"
@@ -23,6 +24,8 @@ website:
       - sidebar:slides
       - text: "Project 1 Information"
         href: project1.qmd
+      - text: "Project 2 Information"
+        href: project2.qmd
       
   sidebar:
     - id: lectures
