Add project 3 information

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,10 @@ website/lectures/lecture*_cache/
 website/lectures/lecture*_files/
 website/slides/raw_slides/slides*cache/
 website/slides/raw_slides/slides*_files/
+website/slides/raw_slides/lecture*_cache/
+guide/*
+exercises/*
+website/lectures/*.RData
+website/slides/raw_slides/*.RData
 
 
