--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -6,6 +6,7 @@ project:
    - "syllabus.qmd"
    - "project1.qmd"
    - "project2.qmd"
+   - "project3.qmd"
    - "lectures/*.qmd"
    - "slides/*.qmd"
    - "slides/raw_slides/*.qmd"
@@ -26,6 +27,8 @@ website:
         href: project1.qmd
       - text: "Project 2 Information"
         href: project2.qmd
+      - text: "Project 3 Information"
+        href: project3.qmd
       
   sidebar:
     - id: lectures
